# Robotica

Lab2/: README.md
Lab_1/: Estrella.ipt  README.md
Lab_1/CAD/: DECORACION.ipt  HERRAMIENTA MARCADOR.ipt  TAPA HERRAMIENTA.ipt
Lab_1/Código_RAPID/: Module1.mod
Lab_2/: Lemniscata.py  README.md
Lab_3/: README.md
Project/: Joystick_read.py  README.md  proyrobot.mlx
Project/Nodos/: InstruccionesJoyMapper.txt  dualshock4_teleop.yaml
Project/Nodos/joy_mapper/: setup.cfg
Project/Nodos/joy_mapper/joy_mapper/: joy_to_twist.py
Project/Phantom_ws/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
Project/Phantom_ws/install/joy_mapper/share/joy_mapper/: package.bat  (+3 more)
Project/Phantom_ws/log/: latest_build
Project/Phantom_ws/src/droidcam_listener/: InstruccionesDroidListener.txt  package.xml  setup.cfg  setup.py
Project/Phantom_ws/src/droidcam_listener/droidcam_listener/: droidcam_listener.py
Project/Phantom_ws/src/droidcam_publisher/: InstruccionesDroidcamPublisher.txt  droidcam_params.yaml  package.xml  setup.cfg  setup.py
Project/Phantom_ws/src/droidcam_publisher/droidcam_publisher/: droidcam_publisher.py
Project/Phantom_ws/src/joy_mapper/: InstruccionesJoyMapper.txt  dualshock4_teleop.yaml  setup.py
Project/Phantom_ws/src/joy_mapper/joy_mapper/: joy_to_twist.py
Project/Phantom_ws/src/phantom_controller/: package.xml  setup.cfg  setup.py
Project/Phantom_ws/src/phantom_controller/phantom_controller/: phantom_controller.py
Project/Phantom_ws/src/phantom_kinematics/: package.xml  setup.cfg  setup.py
Project/Phantom_ws/src/robot_description/: CMakeLists.txt  package.xml
Project/Phantom_ws/src/robot_description/urdf/: robot.urdf  robot.xacro
(+2 files in other folders)
