<package format="3">
  <name>droidcam_listener</name>
  <version>0.0.0</version>
  <description>Listener para el nodo de DroidCam</description>

  <maintainer email="tu@email.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
