<?xml version="1.0"?>
<package format="3">
  <name>droidcam_publisher</name>
  <version>0.0.1</version>
  <description>Publisher de imágenes usando DroidCam en ROS 2</description>

  <maintainer email="tuemail@example.com">Tu Nombre</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv-python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

